[gd_scene load_steps=14 format=3 uid="uid://c54b3wvhi88m6"]

[ext_resource type="Script" uid="uid://b67nssmhsan85" path="res://telas/minigames/bio_escudo/Scripts/tutorial_popup.gd" id="1_w6kmf"]
[ext_resource type="Texture2D" uid="uid://camw6mfh0etks" path="res://telas/minigames/bio_escudo/Tutorial_Popup_assets/ursinho box clean.png" id="2_hhnqi"]
[ext_resource type="FontFile" uid="uid://cmajfe8761ay" path="res://telas/minigames/bio_escudo/assets/fonts/JungleAdventurer.ttf" id="3_6mhsh"]
[ext_resource type="Texture2D" uid="uid://w7kbigjb50nr" path="res://telas/minigames/bio_escudo/Tutorial_Popup_assets/ursinho closedeyes box clean.png" id="3_kyeog"]
[ext_resource type="Texture2D" uid="uid://clsbe3nqk0ipn" path="res://telas/minigames/bio_escudo/assets/UI/button_finished_icon.png" id="4_4vx64"]
[ext_resource type="Texture2D" uid="uid://cbk2mqxpq3ci" path="res://telas/minigames/bio_escudo/Tutorial_Popup_assets/ursinho descontente box clean.png" id="4_ofvin"]
[ext_resource type="Theme" uid="uid://dv6ojfjvk877o" path="res://telas/interface/assets/temas/tema_botao_audio.tres" id="5_4vx64"]
[ext_resource type="Texture2D" uid="uid://bxlr23q73f6mp" path="res://telas/minigames/bio_escudo/Tutorial_Popup_assets/ursinho happy box clean.png" id="5_nmfij"]
[ext_resource type="Texture2D" uid="uid://cuvshfck11rwu" path="res://telas/minigames/bio_escudo/Tutorial_Popup_assets/ursinho olhos fechados box clean.png" id="6_3hnwx"]
[ext_resource type="Texture2D" uid="uid://jp1oykrsqgc" path="res://telas/interface/assets/imagens/pop_up_audio.png" id="6_gnpdh"]
[ext_resource type="AudioStream" uid="uid://cakdnqnlekhe0" path="res://telas/minigames/bio_escudo/assets/sounds/Succes_scream_msg.wav" id="11_nmfij"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ofvin"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": ExtResource("2_hhnqi")
}, {
"duration": 0.2,
"texture": ExtResource("3_kyeog")
}, {
"duration": 1.0,
"texture": ExtResource("2_hhnqi")
}, {
"duration": 1.0,
"texture": ExtResource("3_kyeog")
}, {
"duration": 1.0,
"texture": ExtResource("2_hhnqi")
}, {
"duration": 0.2,
"texture": ExtResource("3_kyeog")
}, {
"duration": 1.0,
"texture": ExtResource("2_hhnqi")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("2_hhnqi")
}, {
"duration": 25.0,
"texture": ExtResource("4_ofvin")
}],
"loop": false,
"name": &"error",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("2_hhnqi")
}, {
"duration": 3.0,
"texture": ExtResource("3_kyeog")
}, {
"duration": 3.0,
"texture": ExtResource("6_3hnwx")
}, {
"duration": 10.0,
"texture": ExtResource("5_nmfij")
}],
"loop": true,
"name": &"success",
"speed": 5.0
}]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_p4aju"]
frames = 6
frame_0/texture = ExtResource("2_hhnqi")
frame_0/duration = 3.02
frame_1/texture = ExtResource("3_kyeog")
frame_1/duration = 0.33
frame_2/texture = ExtResource("2_hhnqi")
frame_2/duration = 0.16
frame_3/texture = ExtResource("2_hhnqi")
frame_3/duration = 3.0
frame_4/texture = ExtResource("3_kyeog")
frame_4/duration = 0.1
frame_5/texture = ExtResource("2_hhnqi")
frame_5/duration = 3.19

[node name="TutorialPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w6kmf")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BubbleSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(398, 191)
sprite_frames = SubResource("SpriteFrames_ofvin")
animation = &"success"
autoplay = "default"
frame_progress = 0.856815

[node name="Label" type="Label" parent="BubbleSprite"]
anchors_preset = -1
anchor_left = 0.0941358
anchor_top = 0.534
anchor_right = 0.705
anchor_bottom = 0.745
offset_left = -326.0
offset_top = -191.056
offset_right = -325.84
offset_bottom = -191.08
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.988235)
theme_override_fonts/font = ExtResource("3_6mhsh")
theme_override_font_sizes/font_size = 25
text = "Oi, amiguinho! Que bom te ver de novo! 
 Vamos vestir o jaleco de doutor? 
No ursinho amigo?"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BotaoAudio" type="Button" parent="BubbleSprite"]
anchors_preset = -1
anchor_left = 0.757716
anchor_top = 0.734375
anchor_right = 0.989198
anchor_bottom = 0.734375
offset_left = -326.0
offset_top = -191.0
offset_right = -321.0
offset_bottom = -34.0
scale = Vector2(0.56, 0.560001)
theme = ExtResource("5_4vx64")
text = "
"
autowrap_mode = 1
icon_alignment = 1
expand_icon = true
text_direction = 3
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="BubbleSprite/BotaoAudio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_gnpdh")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="BubbleSprite"]
anchors_preset = -1
anchor_left = 0.00617284
anchor_top = 0.742188
anchor_right = 0.153595
anchor_bottom = 0.990056
offset_left = -326.0
offset_top = -191.0
offset_right = 26.4705
offset_bottom = 180.818
scale = Vector2(0.213235, 0.203815)
texture_normal = ExtResource("4_4vx64")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="BubbleSprite"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 0.355556
offset_left = -390.8
offset_top = -191.0
offset_right = -326.0
offset_bottom = 56.467
grow_horizontal = 0
texture = SubResource("AnimatedTexture_p4aju")
metadata/_edit_use_anchors_ = true

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]

[node name="CheerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nmfij")
volume_db = 11.243

[connection signal="pressed" from="BubbleSprite/BotaoAudio" to="." method="_on_botao_audio_pressed"]
[connection signal="pressed" from="BubbleSprite/TextureButton" to="." method="_on_texture_button_pressed"]
